Use properties file to extract url